--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -586,10 +586,23 @@ body.menu-active { overflow: hidden; }
     padding: 0.25rem 0.75rem; font-size: 1.25rem; line-height: 1;
     background-color: transparent; border: 1px solid rgba(0,0,0,0.1);
     border-radius: 0.25rem; transition: box-shadow 0.15s ease-in-out;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+}
+.mobile-menu-toggler:active {
+    background-color: rgba(0,0,0,0.05);
 }
 .mobile-menu-toggler:focus { text-decoration: none; outline: 0; box-shadow: 0 0 0 0.25rem; }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
 }
 /* Hide the mobile menu toggler on large screens */
 @media (min-width: 992px) { .mobile-menu-toggler { display: none; } }
